objects/IAM_Identity_Management_Errors__c.object
<CustomObject>
    <fields>
        <fullName>IAM_Class_Name__c</fullName>
        <label>Class Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Error_Description__c</fullName>
        <label>Error Description</label>
        <length>31000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IAM_Error_Message__c</fullName>
        <description>Field to store the exception message</description>
        <label>Error Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Error_Source__c</fullName>
        <label>Error Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Error_Type__c</fullName>
        <label>Error Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Processed_Data__c</fullName>
        <label>Processed Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IAM_Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IAM_Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Identity Management Error</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>IAM_Error_Source__c</columns>
        <columns>IAM_Error_Type__c</columns>
        <columns>IAM_Error_Description__c</columns>
        <columns>IAM_Processed_Data__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>IAM_WWSPS</fullName>
        <columns>NAME</columns>
        <columns>IAM_Error_Description__c</columns>
        <columns>IAM_Error_Source__c</columns>
        <columns>IAM_Error_Type__c</columns>
        <columns>IAM_Processed_Data__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IAM_Error_Source__c</field>
            <operation>equals</operation>
            <value>IAM WWSPS</value>
        </filters>
        <label>IAM WWSPS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IDENTITY_DA_API_NEW</fullName>
        <columns>NAME</columns>
        <columns>IAM_Class_Name__c</columns>
        <columns>IAM_Error_Description__c</columns>
        <columns>IAM_Error_Message__c</columns>
        <columns>IAM_Error_Source__c</columns>
        <columns>IAM_Error_Type__c</columns>
        <columns>IAM_Processed_Data__c</columns>
        <columns>IAM_Stack_Trace__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IAM_Class_Name__c</field>
            <operation>startsWith</operation>
            <value>CMI_API</value>
        </filters>
        <label>IDENTITY_DA_API</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IDENTITY_LDAP</fullName>
        <columns>NAME</columns>
        <columns>IAM_Error_Description__c</columns>
        <columns>IAM_Error_Source__c</columns>
        <columns>IAM_Error_Type__c</columns>
        <columns>IAM_Processed_Data__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IAM_Error_Source__c</field>
            <operation>equals</operation>
            <value>IDENTITY-LDAP</value>
        </filters>
        <label>IDENTITY-LDAP</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Identity Management Errors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Identity Management Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>